# scraper-component

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
crates/scraper-component/: Cargo.toml
crates/scraper-component-macros/: Cargo.toml
crates/scraper-component-macros-test/: Cargo.toml
crates/scraper-component-macros-test/src/: lib.rs
crates/scraper-component-macros/src/: component.rs  lib.rs  utils.rs
crates/scraper-component/src/: attribute.rs  lib.rs
