[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.1"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/scraper-component"
categories = ["web", "craping"]
readme = "README.md"
edition = "2024"

[workspace.dependencies]
# core
scraper = { version = "0.24" }

# internal
scraper-component.path = "crates/scraper-component"
scraper-component-macros.path = "crates/scraper-component-macros"

# external
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
test-log = { version = "0.2.18", default-features = false, features = [
  "trace",
] }
tracing = { version = "0.1.41" }
anyhow = "1"
itertools = "0"
nonempty = "0.12.0"
