[package]
name = "scraper-component"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
derive_more = { version = "2.1.0", features = ["full"] }
itertools.workspace = true
nonempty.workspace = true
paste = "1.0.15"
scraper.workspace = true
scraper-component-macros.workspace = true
