[package]
name = "scraper-component"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { version = "2.1.0", features = ["full"] }
itertools.workspace = true
nonempty.workspace = true
paste = "1.0.15"
scraper.workspace = true
scraper-component-macros.workspace = true
